Tutorial-Start_to_Finish-Curvilinear_BCs: improve doc

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -48,9 +48,7 @@
     "\n",
     "Following the prescription in the [SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658), we will implement curvilinear boundary conditions for rank-0, rank-1, and symmetric rank-2 tensors in three dimensions; as this is the same dimension and highest rank needed for BSSN.\n",
     "\n",
-    "## Step 2A: Find locations to where outer ghost zone gridpoints map, then at each ghost zone gridpoint, find and store the correct parity condition type for each gridfunction up to rank 2 (the highest rank in the BSSN RHSs)\n",
-    "\n",
-    "We start by following the procedure of the [scalar wave in curvilinear coordinates tutorial](Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb), to find the locations to where the outer ghost zone gridpoints map. As described in the scalar wave in curvilinear coordinates tutorial, this requires first mapping from the curvilinear coordinate gridpoints $(x_0,x_1,x_2)$ in the outer ghost zones to the corresponding Cartesian grid points $(x,y,z)$ in the grid interior or outer boundary.\n",
+    "## Introduction to parity conditions\n",
     "\n",
     "Next suppose we have a vector $v^\\rho$ defined at ghostzone $(-\\rho,\\phi,z)$ ($\\rho>0$) in cylindrical coordinates. This will map to an interior point at $(\\rho,\\phi+\\pi,z)$. At this point, the direction of the $\\hat{\\rho}$ unit vector flips sign. Thus we cannot simply set the value of $v^\\rho$ to the value it possesses at interior point $(\\rho,\\phi+\\pi,z)$; that would result in a sign error. Instead we have\n",
     "\\begin{align}\n",
@@ -315,6 +313,37 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Step 2A.ii: Implement a modified version of the scalar wave in curvilinear coordinates boundary condition ghost zone mapping routine, so that it also defines the parity conditions\n",
+    "\n",
+    "This is a two-step algorithm:\n",
+    "\n",
+    "1. Find locations to where outer ghost zone gridpoints map\n",
+    "    1. As described in the [scalar wave in curvilinear coordinates tutorial](Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb), this requires first mapping from the curvilinear coordinate gridpoints $(x_0,x_1,x_2)$ in the outer ghost zones to the corresponding Cartesian grid points $(x,y,z)$ in the grid interior or outer boundary (handled by xxminmax, xxCart, and Cart_to_xx defined below).\n",
+    "    1. The interior gridpoint to which each ghost zone maps will be stored in the *ghostzone_map* data structure:\n",
+    "```C\n",
+    "typedef struct ghostzone_map {\n",
+    "   short i0,i1,i2;\n",
+    "} gz_map;\n",
+    "```\n",
+    "1. At each ghost zone gridpoint, find and store the correct parity condition type for each gridfunction up to rank 2 (the highest rank in the BSSN RHSs). As described above, there are a total of 10 possible parity conditions, which each have a unique behavior at a given ghost zone. Thus:\n",
+    "    1. at each ghost zone, we store all 10 parity conditions, in the data structure:\n",
+    "```C\n",
+    "typedef struct parity_conditions {\n",
+    "  int8_t parity[10];\n",
+    "} parity_condition;\n",
+    "```\n",
+    "    1. In the above data structure, parity[i] can only take a value of $\\pm 1$, which is why we store it in the smallest C integer data type, int8_t (a one-byte, signed integer).\n",
+    "    \n",
+    "In the below code blocks:\n",
+    "\n",
+    "1. we first output basic curvilinear$\\leftrightarrow$Cartesian grid mapping C code, which is required by Step 1 of the above algorithm, and\n",
+    "1. then we implement Steps 1 and 2 of the above algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -324,34 +353,25 @@
      "output_type": "stream",
      "text": [
       "Wrote to file \"CurviBoundaryConditions/xxCart.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n",
-      "Wrote to file \"CurviBoundaryConditions/ds_dirn.h\"\n"
+      "Wrote to file \"CurviBoundaryConditions/Cart_to_xx.h\"\n"
      ]
     }
    ],
    "source": [
-    "# Generic coordinate NRPy+ file output, Part 1: output the coordinate bounds xxmin[] and xxmax[]:\n",
+    "# First output code needed for mapping from any given curvilinear coordinate gridpoint \n",
+    "#  to the Cartesian coordinate in the grid interior (xxCart), and then finding the \n",
+    "#  corresponding gridpoint index in the grid interior (Cart_to_xx; xxminmax)\n",
+    "# Generic coordinate NRPy+ file output, Part 1: output the conversion from (x0,x1,x2) to Cartesian (x,y,z)\n",
+    "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xCart[0]\",\"xCart[1]\",\"xCart[2]\"],\n",
+    "        \"CurviBoundaryConditions/xxCart.h\")\n",
+    "# Generic coordinate NRPy+ file output, Part 2: output the coordinate bounds xxmin[] and xxmax[]:\n",
     "with open(\"CurviBoundaryConditions/xxminmax.h\", \"w\") as file:\n",
     "    file.write(\"const REAL xxmin[3] = {\"+str(rfm.xxmin[0])+\",\"+str(rfm.xxmin[1])+\",\"+str(rfm.xxmin[2])+\"};\\n\")\n",
     "    file.write(\"const REAL xxmax[3] = {\"+str(rfm.xxmax[0])+\",\"+str(rfm.xxmax[1])+\",\"+str(rfm.xxmax[2])+\"};\\n\")\n",
-    "# Generic coordinate NRPy+ file output, Part 2: output the conversion from (x0,x1,x2) to Cartesian (x,y,z)\n",
-    "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xCart[0]\",\"xCart[1]\",\"xCart[2]\"],\n",
-    "        \"CurviBoundaryConditions/xxCart.h\")\n",
     "# Generic coordinate NRPy+ file output, Part 3: output the conversion from Cartesian (x,y,z) to interior/OB (x0,x1,x2)\n",
     "outputC([rfm.Cart_to_xx[0],rfm.Cart_to_xx[1],rfm.Cart_to_xx[2]],\n",
     "        [\"Cart_to_xx0_inbounds\",\"Cart_to_xx1_inbounds\",\"Cart_to_xx2_inbounds\"],\n",
-    "        \"CurviBoundaryConditions/Cart_to_xx.h\")\n",
-    "# Generic coordinate NRPy+ file output, Part 4: output the proper distance between gridpoints in given coordinate system\n",
-    "dxx     = ixp.declarerank1(\"dxx\",DIM=3)\n",
-    "ds_dirn = rfm.ds_dirn(dxx)\n",
-    "outputC([ds_dirn[0],ds_dirn[1],ds_dirn[2]],[\"ds_dirn0\",\"ds_dirn1\",\"ds_dirn2\"],\"CurviBoundaryConditions/ds_dirn.h\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Step 2A.ii: Implement a modified version of the scalar wave in curvilinear coordinates boundary condition ghost zone mapping routine, so that it also defines the parity conditions"
+    "        \"CurviBoundaryConditions/Cart_to_xx.h\")"
    ]
   },
   {
