Tutorial-Start_to_Finish-Curvilinear_BCs: Continue improving documentation.

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -4,9 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Start-to-Finish Example: Applying Boundary Conditions in Curvilinear Coordinates\n",
+    "# Start-to-Finish Example: Applying Boundary Conditions in Curvilinear Coordinates for Rank-0, Rank-1, and Symmetric Rank-2 Tensors in Three Dimensions\n",
     "\n",
-    "## This module documents and validates basic boundary condition algorithms for curvilinear coordinate systems (e.g., Spherical, Cylindrical), based on prescription in the [SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658)."
+    "## This module documents and validates basic boundary condition algorithms for curvilinear coordinate systems (e.g., Spherical, Cylindrical), based on prescription in the [SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658).\n",
+    "\n",
+    "Following the prescription in the [SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658), we will implement curvilinear boundary conditions for rank-0, rank-1, and symmetric rank-2 tensors in three dimensions; as this is the same dimension and highest rank needed for BSSN.\n",
+    "\n",
+    "## Introduction to parity conditions\n",
+    "\n",
+    "Next suppose we have a vector $v^\\rho$ defined at ghostzone $(-\\rho,\\phi,z)$ ($\\rho>0$) in cylindrical coordinates. This will map to an interior point at $(\\rho,\\phi+\\pi,z)$. At this point, the direction of the $\\hat{\\rho}$ unit vector flips sign. Thus we cannot simply set the value of $v^\\rho$ to the value it possesses at interior point $(\\rho,\\phi+\\pi,z)$; that would result in a sign error. Instead we have\n",
+    "\\begin{align}\n",
+    "v^\\rho(-\\rho,\\phi,z)&=-v^\\rho(\\rho,\\phi+\\pi,z) \\\\\n",
+    "&= \\mathbf{e}^\\rho\\left(-\\rho,\\phi,z\\right) \\cdot \\mathbf{e}^\\rho\\left(\\rho,\\phi+\\pi,z\\right)v^\\rho(\\rho,\\phi+\\pi,z),\n",
+    "\\end{align}\n",
+    "where $\\mathbf{e}^\\rho\\left(\\rho,\\phi,z\\right)$ is the $\\rho$ unit vector evaluated at point $(\\rho,\\phi,z)$, and $\\mathbf{e}^\\rho\\left(-\\rho,\\phi,z\\right) \\cdot \\mathbf{e}^\\rho\\left(\\rho,\\phi+\\pi,z\\right)$ is the dot product of the two unit vectors, which must evaluate to $\\pm 1$ (i.e., the **parity**). Contrast this with scalars, which do not possess a sense of direction/parity.\n",
+    "\n",
+    "Given this pattern, once the interior grid point $(x_0,x_1,x_2)_{\\rm in}$ corresponding to an inner boundary point $(x_0,x_1,x_2)_{\\rm IB}$ has been found, the generic procedure to apply these so-called \"parity conditions\" for a generic rank-$N$ tensor ($N>0$) is as follows:\n",
+    "\n",
+    "1. The first component of the rank-$N$ tensor corresponds to some direction with unit vector $\\mathbf{e}^i$; e.g., $v^r$ corresponds to the $\\mathbf{e}^r$ direction. Compute the dot product of the unit vector $\\mathbf{e}^i$ evaluated at points $(x_0,x_1,x_2)_{\\rm in}$ and $(x_0,x_1,x_2)_{\\rm IB}$. Define this dot product as $S_1$:\n",
+    "$$\n",
+    "S_1 = \\mathbf{e}^i\\left((x_0,x_1,x_2)_{\\rm in}\\right) \\cdot \\mathbf{e}^i\\left((x_0,x_1,x_2)_{\\rm IB}\\right).\n",
+    "$$\n",
+    "1. S_1 will take the value of $\\pm 1$, depending on the unit-vector direction and the points $(x_0,x_1,x_2)_{\\rm in}$ and $(x_0,x_1,x_2)_{\\rm IB}$\n",
+    "1. Repeat the above for the remaining components of the rank-$N$ tensor $j\\in \\{2,3,...,N\\}$, storing each $S_j$.\n",
+    "1. The tensor mapping from $(x_0,x_1,x_2)_{\\rm IB}$ to $(x_0,x_1,x_2)_{\\rm in}$ for this tensor $T^{ijk...}_{mnp...}$ will be given by\n",
+    "$$\n",
+    "T^{ijk...}_{lmn...}(x_0,x_1,x_2)_{\\rm IB} = \\prod_{\\ell=1}^N S_\\ell T^{ijk...}_{mnp...}(x_0,x_1,x_2)_{\\rm in}.\n",
+    "$$\n",
+    "\n",
+    "In this formulation of BSSN, we only need to deal with rank-0, rank-1, and *symmetric* rank-2 tensors. Further, our basis consists of 3 directions, so there are a total of \n",
+    "+ 1 parity condition (the trivial +1) for scalars (rank-0 tensors)\n",
+    "+ 3 parity conditions for all rank-1 tensors (corresponding to each direction)\n",
+    "+ 6 parity conditions for all *symmetric* rank-2 tensors (corresponding to the number of elements in the lower or upper triangle of a $3\\times3$ matrix, including the diagonal)\n",
+    "\n",
+    "Thus we must keep track of the behavior of **10 separate parity conditions**, which can be evaluated once when the simulation begins, for all time. \n"
    ]
   },
   {
@@ -46,36 +77,9 @@
    "source": [
     "# Step 2: Implement C code for implementation of curvilinear coordinate boundary conditions\n",
     "\n",
-    "Following the prescription in the [SENR/NRPy+ paper](https://arxiv.org/abs/1712.07658), we will implement curvilinear boundary conditions for rank-0, rank-1, and symmetric rank-2 tensors in three dimensions; as this is the same dimension and highest rank needed for BSSN.\n",
+    "## Step 2.A: Register gridfunctions of all parity types\n",
     "\n",
-    "## Introduction to parity conditions\n",
-    "\n",
-    "Next suppose we have a vector $v^\\rho$ defined at ghostzone $(-\\rho,\\phi,z)$ ($\\rho>0$) in cylindrical coordinates. This will map to an interior point at $(\\rho,\\phi+\\pi,z)$. At this point, the direction of the $\\hat{\\rho}$ unit vector flips sign. Thus we cannot simply set the value of $v^\\rho$ to the value it possesses at interior point $(\\rho,\\phi+\\pi,z)$; that would result in a sign error. Instead we have\n",
-    "\\begin{align}\n",
-    "v^\\rho(-\\rho,\\phi,z)&=-v^\\rho(\\rho,\\phi+\\pi,z) \\\\\n",
-    "&= \\mathbf{e}^\\rho\\left(-\\rho,\\phi,z\\right) \\cdot \\mathbf{e}^\\rho\\left(\\rho,\\phi+\\pi,z\\right)v^\\rho(\\rho,\\phi+\\pi,z),\n",
-    "\\end{align}\n",
-    "where $\\mathbf{e}^\\rho\\left(\\rho,\\phi,z\\right)$ is the $\\rho$ unit vector evaluated at point $(\\rho,\\phi,z)$, and $\\mathbf{e}^\\rho\\left(-\\rho,\\phi,z\\right) \\cdot \\mathbf{e}^\\rho\\left(\\rho,\\phi+\\pi,z\\right)$ is the dot product of the two unit vectors, which must evaluate to $\\pm 1$ (i.e., the **parity**). Contrast this with scalars, which do not possess a sense of direction/parity.\n",
-    "\n",
-    "Given this pattern, once the interior grid point $(x_0,x_1,x_2)_{\\rm in}$ corresponding to an inner boundary point $(x_0,x_1,x_2)_{\\rm IB}$ has been found, the generic procedure to apply these so-called \"parity conditions\" for a generic rank-$N$ tensor ($N>0$) is as follows:\n",
-    "\n",
-    "1. The first component of the rank-$N$ tensor corresponds to some direction with unit vector $\\mathbf{e}^i$; e.g., $v^r$ corresponds to the $\\mathbf{e}^r$ direction. Compute the dot product of the unit vector $\\mathbf{e}^i$ evaluated at points $(x_0,x_1,x_2)_{\\rm in}$ and $(x_0,x_1,x_2)_{\\rm IB}$. Define this dot product as $S_1$:\n",
-    "$$\n",
-    "S_1 = \\mathbf{e}^i\\left((x_0,x_1,x_2)_{\\rm in}\\right) \\cdot \\mathbf{e}^i\\left((x_0,x_1,x_2)_{\\rm IB}\\right).\n",
-    "$$\n",
-    "1. S_1 will take the value of $\\pm 1$, depending on the unit-vector direction and the points $(x_0,x_1,x_2)_{\\rm in}$ and $(x_0,x_1,x_2)_{\\rm IB}$\n",
-    "1. Repeat the above for the remaining components of the rank-$N$ tensor $j\\in \\{2,3,...,N\\}$, storing each $S_j$.\n",
-    "1. The tensor mapping from $(x_0,x_1,x_2)_{\\rm IB}$ to $(x_0,x_1,x_2)_{\\rm in}$ for this tensor $T^{ijk...}_{mnp...}$ will be given by\n",
-    "$$\n",
-    "T^{ijk...}_{lmn...}(x_0,x_1,x_2)_{\\rm IB} = \\prod_{\\ell=1}^N S_\\ell T^{ijk...}_{mnp...}(x_0,x_1,x_2)_{\\rm in}.\n",
-    "$$\n",
-    "\n",
-    "In this formulation of BSSN, we only need to deal with rank-0, rank-1, and *symmetric* rank-2 tensors. Further, our basis consists of 3 directions, so there are a total of \n",
-    "+ 1 parity condition (the trivial +1) for scalars (rank-0 tensors)\n",
-    "+ 3 parity conditions for all rank-1 tensors (corresponding to each direction)\n",
-    "+ 6 parity conditions for all *symmetric* rank-2 tensors (corresponding to the number of elements in the lower or upper triangle of a $3\\times3$ matrix, including the diagonal)\n",
-    "\n",
-    "Thus we must keep track of the behavior of **10 separate parity conditions**, which can be evaluated once when the simulation begins, for all time. Next, for validation purposes, we will register within NRPy+ one gridfunction per parity condition:"
+    "For validation purposes, we will register within NRPy+ one gridfunction per parity condition:"
    ]
   },
   {
@@ -84,6 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 2.a\n",
+    "\n",
     "# 6 gridfunctions, corresponding to all unique rank-2 tensor components:\n",
     "ranktwosymmDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"ranktwosymmDD\", \"sym01\")\n",
     "# 3 gridfunctions, corresponding to all unique rank-1 tensor components:\n",
@@ -96,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Step 2A.iii: Set #define aliases for all gridfunctions\n",
+    "##  Step 2.B: Set #define aliases for all gridfunctions\n",
     "\n",
     "We have just registered **10** gftype=\"AUX\" gridfunctions. gftype=\"EVOL\" is reserved for gridfunctions that store the solution of the evolved variables in our PDEs. When accessing the gridfunctions within the C code, it is most convenient to simply enumerate them with a unique numbering convention. \n",
     "\n",
@@ -117,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First we set up the evolved and auxiliary variables lists\n",
+    "# Step 2.B: Set up the evolved and auxiliary variables lists\n",
     "evolved_variables_list   = []\n",
     "auxiliary_variables_list = []\n",
     "for i in range(len(gri.glb_gridfcs_list)):\n",
@@ -149,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Step 2A.iv: Assign the correct parity condition for each test gridfunction\n",
+    "###  Step 2.C: Assign the correct parity condition for each test gridfunction\n",
     "\n",
     "We will assign the appropriate parity condition based on the following numbering:\n",
     "\n",
@@ -190,32 +196,34 @@
     }
    ],
    "source": [
-    "# Next we set the parity conditions on all gridfunctions in gf_list,\n",
+    "# Step 2.C: set the parity conditions on all gridfunctions in gf_list,\n",
     "#       based on how many digits are at the end of their names\n",
-    "def set_parity_conditions(gf_list):\n",
+    "def set_parity_types(gf_list):\n",
     "    parity_type = []\n",
     "    for i in range(len(gf_list)):\n",
     "        varname = gf_list[i]\n",
     "        parity_type__orig_len = len(parity_type)\n",
     "        if  len(varname)>2:\n",
-    "            if   varname[len(varname)-2] == \"0\" and varname[len(varname)-1] == \"0\":\n",
+    "            if   varname[-2] == \"0\" and varname[-1] == \"0\": # In Python, a[-1] points to the last\n",
+    "                                                            # element of a list; a[-2] the\n",
+    "                                                            # second-to-last element, etc.\n",
     "                parity_type.append(4)\n",
-    "            elif varname[len(varname)-2] == \"0\" and varname[len(varname)-1] == \"1\":\n",
+    "            elif varname[-2] == \"0\" and varname[-1] == \"1\":\n",
     "                parity_type.append(5)\n",
-    "            elif varname[len(varname)-2] == \"0\" and varname[len(varname)-1] == \"2\":\n",
+    "            elif varname[-2] == \"0\" and varname[-1] == \"2\":\n",
     "                parity_type.append(6)\n",
-    "            elif varname[len(varname)-2] == \"1\" and varname[len(varname)-1] == \"1\":\n",
+    "            elif varname[-2] == \"1\" and varname[-1] == \"1\":\n",
     "                parity_type.append(7)\n",
-    "            elif varname[len(varname)-2] == \"1\" and varname[len(varname)-1] == \"2\":\n",
+    "            elif varname[-2] == \"1\" and varname[-1] == \"2\":\n",
     "                parity_type.append(8)\n",
-    "            elif varname[len(varname)-2] == \"2\" and varname[len(varname)-1] == \"2\":\n",
+    "            elif varname[-2] == \"2\" and varname[-1] == \"2\":\n",
     "                parity_type.append(9)\n",
     "        if len(varname)>1 and len(parity_type) == parity_type__orig_len:\n",
-    "            if   varname[len(varname)-1] == \"0\":\n",
+    "            if   varname[-1] == \"0\":\n",
     "                parity_type.append(1)\n",
-    "            elif varname[len(varname)-1] == \"1\":\n",
+    "            elif varname[-1] == \"1\":\n",
     "                parity_type.append(2)\n",
-    "            elif varname[len(varname)-1] == \"2\":\n",
+    "            elif varname[-1] == \"2\":\n",
     "                parity_type.append(3)\n",
     "        if varname[len(varname)-1].isdigit() == False:\n",
     "            parity_type.append(0)\n",
@@ -225,8 +233,8 @@
     "            exit(1)\n",
     "    return parity_type\n",
     "\n",
-    "evol_parity_type = set_parity_conditions(evolved_variables_list  )\n",
-    "aux_parity_type  = set_parity_conditions(auxiliary_variables_list)\n",
+    "evol_parity_type = set_parity_types(evolved_variables_list  )\n",
+    "aux_parity_type  = set_parity_types(auxiliary_variables_list)\n",
     "\n",
     "with open(\"CurviBoundaryConditions/gridfunction_defines.h\", \"a\") as file:\n",
     "    file.write(\"\\n\\n/* PARITY TYPES FOR ALL GRIDFUNCTIONS.\\n\")\n",
@@ -253,9 +261,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Step 2A.i: Set up unit-vector dot products (=parity) for each of the 10 parity condition types\n",
+    "###  Step 2.D: Set up unit-vector dot products (=parity) for each of the 10 parity condition types\n",
     "\n",
-    "First we fill in the parity condition arrays. These take as input $(x_0,x_1,x_2)_{\\rm in}$ and $(x_0,x_1,x_2)_{\\rm IB}$, and output the necessary dot products for each parity type. To wit, there are 10 parity types for BSSN evolved variables, which include tensors up to and including rank-2:"
+    "First we fill in the parity condition arrays. These take as input $(x_0,x_1,x_2)_{\\rm in}$ and $(x_0,x_1,x_2)_{\\rm IB}$, and output the necessary dot product(s) for each parity type. To wit (as described above), there are 10 parity types for BSSN evolved variables, which include tensors up to and including rank-2:"
    ]
   },
   {
@@ -267,11 +275,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n"
+      "Wrote to file \"CurviBoundaryConditions/set_parity_conditions.h\"\n",
+      "\n",
+      "\n",
+      "Example: parity type 1's dot product is given by: \n",
+      "parity[1] = sin(xx1)*sin(xx1_inbounds)*sin(xx2)*sin(xx2_inbounds) + sin(xx1)*sin(xx1_inbounds)*cos(xx2)*cos(xx2_inbounds) + cos(xx1)*cos(xx1_inbounds)\n"
      ]
     }
    ],
    "source": [
+    "# Step 2.D: Set up unit-vector dot products (=parity) for each of the 10 parity condition types\n",
     "parity = ixp.zerorank1(DIM=10)\n",
     "UnitVectors_inner = ixp.zerorank2()\n",
     "xx0_inbounds,xx1_inbounds,xx2_inbounds = sp.symbols(\"xx0_inbounds xx1_inbounds xx2_inbounds\", real=True)\n",
@@ -302,21 +315,16 @@
     "lhs_strings = []\n",
     "for i in range(10):\n",
     "    lhs_strings.append(\"parity[\"+str(i)+\"]\")\n",
-    "outputC(parity,lhs_strings, \"CurviBoundaryConditions/set_parity_conditions.h\")"
+    "outputC(parity,lhs_strings, \"CurviBoundaryConditions/set_parity_conditions.h\")\n",
+    "\n",
+    "print(\"\\n\\nExample: parity type 1's dot product is given by: \\n\"+lhs_strings[1]+\" = \"+str(parity[1]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Step 2A.ii: Implement a modified version of the scalar wave in curvilinear coordinates boundary condition ghost zone mapping routine, so that it also defines the parity conditions\n",
+    "###  Step 2.E: Implement a modified version of the scalar wave in curvilinear coordinates boundary condition ghost zone mapping routine, so that it also defines the parity conditions\n",
     "\n",
     "This is a two-step algorithm:\n",
     "\n",
@@ -358,9 +366,13 @@
     }
    ],
    "source": [
+    "# Step 2.E: Modified version of the scalar wave in curvilinear coordinates boundary \n",
+    "#           condition ghost zone mapping routine, so that it also defines the parity \n",
+    "#           conditions.\n",
+    "\n",
     "# First output code needed for mapping from any given curvilinear coordinate gridpoint \n",
-    "#  to the Cartesian coordinate in the grid interior (xxCart), and then finding the \n",
-    "#  corresponding gridpoint index in the grid interior (Cart_to_xx; xxminmax)\n",
+    "#  to the Cartesian coordinate in the grid interior (xxCart), and then find the \n",
+    "#  corresponding gridpoint index in the grid interior (Cart_to_xx; xxminmax).\n",
     "# Generic coordinate NRPy+ file output, Part 1: output the conversion from (x0,x1,x2) to Cartesian (x,y,z)\n",
     "outputC([rfm.xxCart[0],rfm.xxCart[1],rfm.xxCart[2]],[\"xCart[0]\",\"xCart[1]\",\"xCart[2]\"],\n",
     "        \"CurviBoundaryConditions/xxCart.h\")\n",
@@ -471,7 +483,11 @@
     "\n",
     "// Part P6: Declare boundary condition OB_UPDATE macro,\n",
     "//          which updates a single face of the 3D grid cube\n",
-    "//          using quadratic polynomial extrapolation.\n",
+    "//          with\n",
+    "//          1. quadratic polynomial extrapolation, if the face\n",
+    "//             corresponds to an outer boundary, or\n",
+    "//          2. parity condition, if the face maps to a point\n",
+    "//             in the grid interior.\n",
     "const int MAXFACE = -1;\n",
     "const int NUL     = +0;\n",
     "const int MINFACE = +1;\n",
