--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "To do this, for each .h file we need, we will set up an array of lhrh objects representing the gridfunctios to print. We will then pass that array to FD_outputC to get a string of optimized C code. Note that several kernels depend on the value of u0; we append the line of code to those kernels to access the value of u0. Next, we use the loop function to add code to the kernel so that is applied to the whole ETK grid."
+    "To do this, for each .h file we need, we will set up an array of lhrh objects representing the gridfunctions to print. We will then pass that array to FD_outputC to get a string of optimized C code. Next, we use the loop function to add code to the kernel so that is applied to the whole ETK grid."
    ]
   },
   {
@@ -1385,7 +1385,7 @@
     "$$\\label{step2bi}$$\n",
     "\n",
     "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. This file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
-    "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables that exist within those functions. Then, we tell the toolkit that we want the gridfunctions $A_i$, $\\tilde{S}_i$, and $\\sqrt{\\gamma}\\Phi$ to be visible to other thorns by using the keyword \"public\". "
+    "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables and functions that exist and are declared \"public\" within those thorns. Then, we tell the toolkit that we want the gridfunctions $A_i$, $\\tilde{S}_i$, and $\\sqrt{\\gamma}\\Phi$ to be visible to other thorns by using the keyword \"public\". "
    ]
   },
   {
@@ -1586,11 +1586,11 @@
     "    1. **StildeD_from_initial_data**\n",
     "        1. Computes the initial Poynting flux from the initial magnetic field and Valencia 3-velocity data.\n",
     "        1. Reads: gammaDD00, gammaDD01, gammaDD02, gammaDD11, gammaDD12, gammaDD22, BU0, BU1, BU2, ValenciavU0, ValenciavU1, ValenciavU2 (Everywhere)\n",
-    "        1. Writes: StildeD0, StildeD1, StildeD0 (Interior)\n",
+    "        1. Writes: StildeD0, StildeD1, StildeD2 (Interior)\n",
     "0. **GiRaFFE_HO**\n",
     "    1. **HydroBase_to_GiRaFFE**\n",
     "        1. Reads data from **HydroBase** variables into **GiRaFFE_HO** variables.\n",
-    "        1. Reads: Avec, Bvec, vel (from HydroBase) (Everywhere)\n",
+    "        1. Reads: Avec, Bvec, vel (from **HydroBase**) (Everywhere)\n",
     "        1. Writes: AD0, AD1, AD2, BU0, BU1, BU2, ValenciavU0, ValenciavU1, ValenciavU2 (Everywhere)\n",
     "    1. **GiRaFFE_HO_set_prereqs**\n",
     "        1. Sets auxiliary gridfunctions that will need to be finite-differenced for the right-hand sides.\n",
