grid.py & Tutorial-Numerical_Grids: Add output__gridfunction_defines_h() function

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -33,15 +33,15 @@
     "\n",
     "Continuing the discussion from the previous section, we now have $\\mathbf{d}_{\\rm new} \\ne \\mathbf{d}_{\\rm gz}$. Next suppose we are given a generic rank-$N$ tensor ($N>0$).\n",
     "\n",
-    "1. The first component of the rank-$N$ tensor corresponds to some direction with unit vector $\\mathbf{e}^i$; e.g., $v^r$ corresponds to the $\\mathbf{e}^r$ direction. Compute the dot product of the unit vector $\\mathbf{e}^i$ evaluated at points $\\mathbf{d}_{\\rm gz}$ and $\\mathbf{d}_{\\rm new}$. Define this dot product as $S_1$:\n",
+    "1. The first component of the rank-$N$ tensor corresponds to some direction with unit vector $\\mathbf{e}^i$; e.g., $v^r$ corresponds to the $\\mathbf{e}^r$ direction. Compute the dot product of the unit vector $\\mathbf{e}^i$ evaluated at points $\\mathbf{d}_{\\rm gz}$ and $\\mathbf{d}_{\\rm new}$. Define this dot product as $P_1$ (\"$P$\" for \"parity\"):\n",
     "$$\n",
-    "S_1 = \\mathbf{e}^i\\left(\\mathbf{d}_{\\rm gz}\\right) \\cdot \\mathbf{e}^i\\left(\\mathbf{d}_{\\rm new}\\right).\n",
+    "P_1 = \\mathbf{e}^i\\left(\\mathbf{d}_{\\rm gz}\\right) \\cdot \\mathbf{e}^i\\left(\\mathbf{d}_{\\rm new}\\right).\n",
     "$$\n",
-    "1. S_1 will take the value of $\\pm 1$, depending on the unit-vector direction and the points $\\mathbf{d}_{\\rm gz}$ and $\\mathbf{d}_{\\rm new}$\n",
-    "1. Repeat the above for the remaining components of the rank-$N$ tensor $j\\in \\{2,3,...,N\\}$, storing each $S_j$.\n",
+    "1. $P_1$ will take the value of $\\pm 1$, depending on the unit-vector direction and the points $\\mathbf{d}_{\\rm gz}$ and $\\mathbf{d}_{\\rm new}$\n",
+    "1. Repeat the above for the remaining components of the rank-$N$ tensor $j\\in \\{2,3,...,N\\}$, storing each $P_j$.\n",
     "1. The tensor mapping from $\\mathbf{d}_{\\rm gz}$ to $\\mathbf{d}_{\\rm new}$ for this tensor $T^{ijk...}_{mnp...}$ will be given by\n",
     "$$\n",
-    "T^{ijk...}_{lmn...}(x_0,x_1,x_2)_{\\rm gz} = \\prod_{\\ell=1}^N S_\\ell T^{ijk...}_{mnp...}(x_0,x_1,x_2)_{\\rm new}.\n",
+    "T^{ijk...}_{lmn...}(x_0,x_1,x_2)_{\\rm gz} = \\prod_{\\ell=1}^N P_\\ell T^{ijk...}_{mnp...}(x_0,x_1,x_2)_{\\rm new}.\n",
     "$$\n",
     "\n",
     "In this formulation of BSSN, we only need to deal with rank-0, rank-1, and *symmetric* rank-2 tensors. Further, our basis consists of 3 directions, so there are a total of \n",
@@ -89,9 +89,9 @@
    "source": [
     "# Step 2: Implement C code for implementation of curvilinear coordinate boundary conditions\n",
     "\n",
-    "## Step 2.A: Register gridfunctions of all parity types\n",
+    "## Step 2.A: Register gridfunctions of all 10 parity types; output gridfunction aliases to CurviBoundaryConditions/gridfunction_defines.h\n",
     "\n",
-    "For validation purposes, we will register within NRPy+ one gridfunction per parity condition:"
+    "For validation purposes, we will register within NRPy+ one gridfunction per each of the 10 parity conditions, and then output to file the corresponding gridfunction aliases, so the C code can access each gridfunction by its human-friendly alias (e.g., test_gfs\\[RANKONEU0GF\\]\\[idx\\] instead of test_gfs\\[6\\]\\[idx\\])."
    ]
   },
   {
@@ -100,74 +100,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2.a\n",
+    "# Step 2.A: Register gridfunctions of all 10 parity types\n",
     "\n",
     "# 6 gridfunctions, corresponding to all unique rank-2 tensor components:\n",
     "ranktwosymmDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"ranktwosymmDD\", \"sym01\")\n",
     "# 3 gridfunctions, corresponding to all unique rank-1 tensor components:\n",
     "rankoneU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"rankoneU\")\n",
     "# 1 rank-0 (scalar) gridfunction\n",
-    "rankzero = ixp.gri.register_gridfunctions(\"AUX\",\"rankzero\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##  Step 2.B: Set #define aliases for all gridfunctions\n",
-    "\n",
-    "We have just registered **10** gftype=\"AUX\" gridfunctions. gftype=\"EVOL\" is reserved for gridfunctions that store the PDE solution. When accessing the gridfunctions within the C code, it is most convenient to simply enumerate them with a unique numbering convention. \n",
-    "\n",
-    "For example, in the scalar wave example we wrote by hand:\n",
-    "\n",
-    "```C\n",
-    "#define NUM_GFS 2\n",
-    "#define UUGF 0\n",
-    "#define VVGF 1\n",
-    "```\n",
-    "\n",
-    "Writing many more than 2 gridfunction aliases in this way would be a waste of time, since they are registered within NRPy+. Thus we use the NRPy+ data structures below to generate the #define aliases automatically:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 2.B: Set up the evolved and auxiliary variables lists\n",
-    "evolved_variables_list   = []\n",
-    "auxiliary_variables_list = []\n",
-    "for i in range(len(gri.glb_gridfcs_list)):\n",
-    "    if gri.glb_gridfcs_list[i].gftype == \"EVOL\":\n",
-    "        evolved_variables_list.append(gri.glb_gridfcs_list[i].name)\n",
-    "    if gri.glb_gridfcs_list[i].gftype == \"AUX\":\n",
-    "        auxiliary_variables_list.append(gri.glb_gridfcs_list[i].name)\n",
-    "\n",
-    "# Next we alphabetize the lists\n",
-    "evolved_variables_list.sort()\n",
-    "auxiliary_variables_list.sort()\n",
+    "rankzero = ixp.gri.register_gridfunctions(\"AUX\",\"rankzero\")\n",
     "\n",
     "!mkdir CurviBoundaryConditions 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "\n",
-    "# Finally we set up the #define statements:\n",
-    "with open(\"CurviBoundaryConditions/gridfunction_defines.h\", \"w\") as file:\n",
-    "    file.write(\"/* This file is automatically generated by NRPy+. Do not edit. */\\n\\n\")\n",
-    "    file.write(\"/* EVOLVED VARIABLES: */\\n\")\n",
-    "    file.write(\"#define NUM_EVOL_GFS \"+str(len(evolved_variables_list))+\"\\n\")\n",
-    "    for i in range(len(evolved_variables_list)):\n",
-    "        file.write(\"#define \"+evolved_variables_list[i].upper()+\"GF\\t\"+str(i)+\"\\n\")\n",
-    "    file.write(\"\\n\\n /* AUXILIARY VARIABLES: */\\n\")\n",
-    "    file.write(\"#define NUM_AUX_GFS \"+str(len(auxiliary_variables_list))+\"\\n\")\n",
-    "    for i in range(len(auxiliary_variables_list)):\n",
-    "        file.write(\"#define \"+auxiliary_variables_list[i].upper()+\"GF\\t\"+str(i)+\"\\n\")"
+    "gri.output__gridfunction_defines_h(\"CurviBoundaryConditions\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Step 2.C: Assign the correct parity condition for each test gridfunction\n",
+    "###  Step 2.B: Assign the correct parity condition for each test gridfunction\n",
     "\n",
     "We will assign the appropriate parity condition based on the following numbering:\n",
     "\n",
