Make gridfunction registration far more robust.

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -114,27 +114,32 @@
     "\n",
     "# Step 2.A.2. Output gridfunction #define aliases to file:\n",
     "!mkdir CurviBoundaryConditions 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "evolved_variables_list,auxiliary_variables_list = gri.output__gridfunction_defines_h(\"CurviBoundaryConditions\")"
+    "evolved_variables_list,auxiliary_variables_list = \\\n",
+    "        gri.output__gridfunction_defines_h__return_gf_alias_lists(\"CurviBoundaryConditions\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Step 2.B: Assign the correct parity condition for each test gridfunction\n",
+    "###  Step 2.B: Assign the correct parity condition to each test gridfunction\n",
     "\n",
-    "We will assign the appropriate parity condition based on the following numbering:\n",
+    "Based on the names of evolved and auxiliary gridfunctions, the appropriate parity condition will be assigned based on the following numbering:\n",
     "\n",
-    "0. Scalar (Rank-0 tensor)\n",
-    "1. Rank-1 tensor in **i0** direction\n",
-    "1. Rank-1 tensor in **i1** direction\n",
-    "1. Rank-1 tensor in **i2** direction\n",
-    "1. Rank-2 tensor in **i0-i0** direction\n",
-    "1. Rank-2 tensor in **i0-i1** direction\n",
-    "1. Rank-2 tensor in **i0-i2** direction\n",
-    "1. Rank-2 tensor in **i1-i1** direction\n",
-    "1. Rank-2 tensor in **i1-i2** direction\n",
-    "1. Rank-2 tensor in **i2-i2** direction"
+    "Tensor type | Parity type\n",
+    "--- | ---\n",
+    "Scalar (Rank-0 tensor) | 0\n",
+    "Rank-1 tensor in **i0** direction | 1\n",
+    "Rank-1 tensor in **i1** direction | 2\n",
+    "Rank-1 tensor in **i2** direction | 3\n",
+    "Rank-2 tensor in **i0-i0** direction | 4\n",
+    "Rank-2 tensor in **i0-i1** direction | 5\n",
+    "Rank-2 tensor in **i0-i2** direction | 6\n",
+    "Rank-2 tensor in **i1-i1** direction | 7\n",
+    "Rank-2 tensor in **i1-i2** direction | 8\n",
+    "Rank-2 tensor in **i2-i2** direction | 9\n",
+    "\n",
+    "So for example, if the gridfunction name ends with \"11\", then the \"set_parity_types()\" function below will set the parity_type of that gridfunction to 7. BE CAREFUL: scalar gridfunction names that end with "
    ]
   },
   {
