Tutorial-Numerical_Grids: A couple tweaks to improve the output

--- a/Tutorial-Numerical_Grids.ipynb
+++ b/Tutorial-Numerical_Grids.ipynb
@@ -67,8 +67,11 @@
       "\n",
       "\n",
       "\"phi\" is of type \"gridfunction\"\n",
-      "('\\n\\nHere is the list of registered evolved variables: ', [])\n",
-      "('\\n ... and here is the list of registered auxiliary variables: ', ['phi'])\n",
+      "\n",
+      "\n",
+      "\n",
+      "('Here is the list of registered evolved variables: ', [])\n",
+      "('... and here is the list of registered auxiliary variables: ', ['phi'])\n",
       "\n",
       "\n",
       " ... and here is the output gridfunction_defines.h file:\n",
@@ -107,9 +110,10 @@
     "\n",
     "!mkdir NumGrids-tmp 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
     "evolved_variables_list,auxiliary_variables_list = \\\n",
-    "        gri.output__gridfunction_defines_h__return_gf_alias_lists(\"NumGrids-tmp\")\n",
-    "print(\"\\n\\nHere is the list of registered evolved variables: \",evolved_variables_list)\n",
-    "print(\"\\n ... and here is the list of registered auxiliary variables: \",auxiliary_variables_list)\n",
+    "        gri.output__gridfunction_defines_h__return_gf_lists(\"NumGrids-tmp\")\n",
+    "print(\"\\n\\n\")\n",
+    "print(\"Here is the list of registered evolved variables: \",evolved_variables_list)\n",
+    "print(\"... and here is the list of registered auxiliary variables: \",auxiliary_variables_list)\n",
     "print(\"\\n\\n ... and here is the output gridfunction_defines.h file:\")\n",
     "!cat NumGrids-tmp/gridfunction_defines.h"
    ]
