Tutorial-Start_to_Finish-Curvilinear_BCs: Discrete test passes!

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -123,7 +123,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 27.4395020008 seconds.\n"
+      "Finished in 29.2414009571 seconds.\n"
      ]
     }
    ],
@@ -196,7 +196,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 7.9076590538 seconds.\n"
+      "Finished in 7.57428908348 seconds.\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing BSSN/curvilinear_parity_and_outer_boundary_conditions.h\n"
+      "Overwriting BSSN/curvilinear_parity_and_outer_boundary_conditions.h\n"
      ]
     }
    ],
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -964,6 +964,16 @@
     "  // Step 1: Set up initial data to be exact solution at time=0:\n",
     "  initial_data(Nxx_plus_2NGHOSTS, xx, evol_gfs);\n",
     "\n",
+    "// Step 2: Overwrite all data in ghost zones with NaNs\n",
+    "    LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], 0,Nxx_plus_2NGHOSTS[1], 0,Nxx_plus_2NGHOSTS[2]) {\n",
+    "        for(int gf=0;gf<NUM_EVOL_GFS;gf++) {\n",
+    "            const int idx4 = IDX4(gf,i0,i1,i2);\n",
+    "            if(i0 < NGHOSTS || i0 >= Nxx_plus_2NGHOSTS[0]-NGHOSTS) evol_gfs[idx4] = 1.0 / 0.0;\n",
+    "            if(i1 < NGHOSTS || i1 >= Nxx_plus_2NGHOSTS[1]-NGHOSTS) evol_gfs[idx4] = 1.0 / 0.0;\n",
+    "            if(i2 < NGHOSTS || i2 >= Nxx_plus_2NGHOSTS[2]-NGHOSTS) evol_gfs[idx4] = 1.0 / 0.0;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
     "  // Step 1b: Apply boundary conditions *FOR VALIDATION PURPOSES*\n",
     "  apply_bcs(Nxx, Nxx_plus_2NGHOSTS, bc_gz_map,bc_parity_conditions, evol_gfs);\n",
     "  enforce_detgammabar_constraint(Nxx_plus_2NGHOSTS, xx, evol_gfs);\n",
@@ -1083,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1092,13 +1102,13 @@
      "text": [
       "Now compiling, should take ~10 seconds...\n",
       "\n",
-      "Finished in 5.61141705513 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
+      "Finished in 5.56218504906 seconds. Now running at low-resolution. Should take ~25 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 2818.37 | gp/s 7.94e+05\n",
-      "Finished in 9.60225319862 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
+      "\u001b[2KIt: 1100 t=7.50 | 100.0%; ETA 0 s | t/h 2842.54 | gp/s 8.01e+05\n",
+      "Finished in 9.52860879898 seconds, now running at higher-resolution. Should take ~75 seconds...\n",
       "\n",
-      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 919.49 | gp/s 8.18e+05\n",
-      "Finished in 29.4004878998 seconds.\n"
+      "\u001b[2KIt: 1956 t=7.50 | 100.0%; ETA 0 s | t/h 912.49 | gp/s 8.12e+05\n",
+      "Finished in 29.6259250641 seconds.\n"
      ]
     }
    ],
